--- a/config/kyria.conf
+++ b/config/kyria.conf
@@ -10,3 +10,6 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # CONFIG_WS2812_STRIP=y
 
 CONFIG_ZMK_SLEEP=y
+
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=10
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
